--- a/index.html
+++ b/index.html
@@ -5,32 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="David Cassity Projects - Showcasing my creative works">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheet.css">
 
     <title>David Cassity Projects</title>
 </head>
 <body>
 
-    <header>
-        <h1>Welcome to David Cassity Projects</h1>
-    </header>
+    <div class="gif-bar top">
+        <img src="media/heart.gif" alt="Top GIF">
+    </div>
 
     <div class="project-section">
         <div class="project-card" id="project1">
-            <h2>Project 1</h2>
+            <header>
+                <h2>Project 1</h2>
+            </header>
             <p>Description of Project 1 goes here.</p>
-            <img src="project1.jpg" alt="Project 1 Image">
+            <img src="media/bingus.gif" alt="Project 1 Image">
         </div>
 
         <div class="project-card" id="project2">
-            <h2>Project 2</h2>
+            <header>
+                <h2>Project 2</h2>
+            </header>
             <p>Description of Project 2 goes here.</p>
-            <img src="project2.jpg" alt="Project 2 Image">
+            <img src="media/bingus.gif" alt="Project 2 Image">
         </div>
     </div>
 
     <div class="external-link">
         <a href="https://www.example.com" target="_blank">Visit External Website</a>
+    </div>
+
+    <div class="gif-bar bottom">
+        <img src="media/heart.gif" alt="Bottom GIF">
     </div>
 
 </body>
