added external website

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 </head>
 <body>
 
-    <div class="gif-bar top">
-        <img src="media/heart.gif" alt="Top GIF">
-    </div>
-
     <div class="project-section">
         <div class="project-card" id="project1">
             <header>
@@ -34,11 +30,7 @@
     </div>
 
     <div class="external-link">
-        <a href="https://www.example.com" target="_blank">Visit External Website</a>
-    </div>
-
-    <div class="gif-bar bottom">
-        <img src="media/heart.gif" alt="Bottom GIF">
+        <a href="https://floppapedia-revamped.fandom.com/wiki/Bingus" target="_blank">Visit External Website</a>
     </div>
 
 </body>
