--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
 </head>
 <body>
 
-    <div class="project-section">
-        <div class="project-card" id="project1">
-            <header>
-                <h2>Project 1</h2>
-            </header>
-            <p>Description of Project 1 goes here.</p>
-            <img src="media/bingus.gif" alt="Project 1 Image">
+    <header>
+        <h1>Welcome to Bingus</h1>
+    </header>
+
+    <div class="bingus-section">
+        <div class="bingus-card" id="bingus1">
+            <h2>Bingus</h2>
+            <p>bingus my bleoced</p>
+            <img src="media/bingus.gif" alt="Bingus Image">
         </div>
 
-        <div class="project-card" id="project2">
-            <header>
-                <h2>Project 2</h2>
-            </header>
-            <p>Description of Project 2 goes here.</p>
-            <img src="media/bingus.gif" alt="Project 2 Image">
+        <div class="bingus-card" id="bingus2">
+            <h2>Bingus</h2>
+            <p>binfus in jacked</p>
+            <img src="media/blinkus.gif" alt="Project 2 Image">
         </div>
     </div>
 
     <div class="external-link">
-        <a href="https://floppapedia-revamped.fandom.com/wiki/Bingus" target="_blank">Visit External Website</a>
+        <h3>Learn More About Bingus Here</h3>
+        <a href="https://floppapedia-revamped.fandom.com/wiki/Bingus" target="_blank">Click here fro bingus</a>
     </div>
 
 </body>
