changed the link to the website

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="external-link">
         <h3>Learn More About Bingus Here</h3>
-        <a href="https://floppapedia-revamped.fandom.com/wiki/Bingus" target="_blank">Click here fro bingus</a>
+        <a href="https://www.livecoinwatch.com/price/BingusTheCat-__BINGUS" target="_blank">Click here fro bingus</a>
     </div>
 
 </body>
