--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="David Cassity Projects - Showcasing my creative works">
+    <meta name="description" content="funny looking cat">
 
     <link rel="stylesheet" href="stylesheet.css">
 
-    <title>David Cassity Projects</title>
+    <title>splinkus</title>
 </head>
 <body>
 
